css/media-player.css
.sound-container {
  position: relative;
  display: flex;
  flex-direction: column;
}

.sound-image {
  box-sizing: border-box;
  max-width: 100%;
  height: 350px;
  border-radius: 8px;
  align-self: stretch;
  margin-bottom: 35px;
}

.sound-buttons {
  text-align: center;
  align-self: stretch;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 25px;
}

.sound-buttons > button {
  display: grid;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  outline: none;
  border: 0;
  background: transparent;
  width: 33.33%;
}

#play-pause > span {
  font-size: 45px;
}

#previous > span {
  font-size: 45px;
  justify-self: left;
}

#next > span {
  font-size: 45px;
  justify-self: right;
}

.volume {
  display: flex;
  flex-direction: row;
  margin-top: 10px;
}

#volume-input {
  accent-color: white;
  flex-grow: 1;
  outline: none;

}

#desktop-sounds-list {
  list-style: none;
  overflow: hidden;
  overflow-y: auto;
  max-width: 100%;
  height: 350px;
  padding-left: 0;
  border-radius: 8px;
  margin-top: 0;
  scrollbar-width: none;
}

#desktop-sounds-list::-webkit-scrollbar {
  display: none;
}

.list-sound-item {
  display: flex;
  flex-direction: row;
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 20px;
  border-bottom: 1px solid #938E8E;
}

.active {
  background: rgba(161, 161, 161, 0.60);
}

.list-sound-item:hover {
  background: rgba(161, 161, 161, 0.60);
}

.list-sound-item > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.list-sound-image {
  width: 50px;
  height: 50px;
  box-sizing: border-box;
  max-width: 100%;
  border-radius: 8px;
  margin-right: 15px;
}

@media (max-width:800px){
  .sound-image {
    height:300px;
  }
}

